Plugin Name: Membership 2
Author: Fabio Jun, Rheinard Khorf, Philipp Stracker

Change Log:
----------------------------------------------------------------------

1.0.0.6
----------------------------------------------------------------------
- Improve Transaction logs to also log inactice or invalid gateway calls
- Fix issue that did not display any "Page" rules in the Membership Overview screen

1.0.0.6
----------------------------------------------------------------------
- Add logging for payment gateway transactions, can be viewed via "Billings > View Transaction logs"
- Fix subscription details when changing the membership payment_type (within 6 hours after membership update)
- Fix follow-up issue in recent Mailchimp bug fix

1.0.0.5
----------------------------------------------------------------------
- Add possibility to change payment options even when membership has active subscribers!
- Add link to Members-List from the Membership list (click on the member-count value)
- Hide inactive memberships in the Members and Protection Rules pages
- Fix compatibility issue with the wp-recaptcha plugin
- Fix several php notices and warnings ("invalid argument", "undefined index", etc.)
- Fix protection of the Private Message feature in the BuddyPress Add-on
- Fix Mailchimp Add-on to fetch all lists from Mailchimp, not only 25
- Add new hook to observe status change of subscriptions: "ms_subscription_status-<status>"

1.0.0.4
----------------------------------------------------------------------
- Fix the import tool to import data from old Membership plugin correctly (recurring payments, subscription status and end date)
- Fix the i18n support, the plugin is translated correctly again
- Fix error message that was displayed when dates of dripped memberships were saved

1.0.0.3
----------------------------------------------------------------------
- Add better error handling to the upgrade routine